updating match_rep metadata

--- a/data-processing.ipynb
+++ b/data-processing.ipynb
@@ -537,17 +537,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'spinning-disc', 'sites', 'Number_of_channels', 'BF_Zplanes', 'simultaneous-excitation', 'Images_per_well', 'Size_MB', 'Size_MB_std', 'Binning', 'Sites-SubSampled', 'vs-brightfield', 'Plate_Map_Name', 'z_plane', 'aperture', 'Magnification', 'dry-immersion', 'Modality'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def update_metadata(new_metdata_df, old_metadata_df, merge_cols):\n",
     "    \"\"\"\n",
@@ -559,11 +551,12 @@
     "    \"\"\"\n",
     "    new_df = new_metdata_df.copy()\n",
     "    old_df = old_metadata_df.copy()\n",
-    "    # Drop any column from the old_df that is found in the new one, excluding\n",
+    "    # Find the set of column names that are not merge columns\n",
     "    new_cols = set(new_df.loc[:, ~new_df.columns.str.contains(\"|\".join(merge_cols))].columns)\n",
     "    old_cols = set(old_df.loc[:, ~old_df.columns.str.contains(\"|\".join(merge_cols))].columns)\n",
+    "    # Find the intersection of column names between new and old\n",
     "    drop_cols = new_cols.intersection(old_cols)\n",
-    "    # old_df = old_df.drop(old_df.loc[:,~new_df.columns.str.contains(\"|\".join(merge_cols))], axis=1)\n",
+    "    # Drop intersection and keep others (such as Percent_Replicating)\n",
     "    old_df = old_df.drop(drop_cols, axis=1)\n",
     "\n",
     "    # Drop the old cols to be updated\n",
@@ -576,7 +569,6 @@
     "df1 = pd.read_csv(\"output/all-profile-metadata.csv\")\n",
     "df2 = pd.read_csv(\"checkpoints/match_rep_df.csv\")\n",
     "out = update_metadata(df1, df2, [\"Vendor\", \"Batch\", \"Assay_Plate_Barcode\"])\n",
-    "out.columns\n",
     "out.to_csv(\"checkpoints/match_rep_df.csv\", index=False)"
    ]
   },
