better example of processing

--- a/moving-backends-making-profiles.ipynb
+++ b/moving-backends-making-profiles.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -425,24 +425,22 @@
        "[184 rows x 23 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "metadata_df = pd.read_csv(\"/home/ubuntu/jump-scope/jump-scope-analysis/output/all-profile-metadata.csv\")\n",
+    "metadata_df = pd.read_csv(\"output/all-profile-metadata.csv\")\n",
     "metadata_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "def move_profiles(metadata_df, source, destination):\n",
     "    \"\"\"Based on the provided metadata, retroactively move the backends to their respective locations prior\n",
     "    to profile generation\"\"\"\n",
@@ -458,11 +456,13 @@
     "                    # Move file to batch folder\n",
     "                    src = os.path.join(root, file)\n",
     "                    dst = os.path.join(destination, df[\"Batch\"], df[\"Assay_Plate_Barcode\"], file)\n",
-    "                    shutil.copy(src, dst)\n",
+    "                    shutil.move(src, dst)\n",
     "\n",
-    "move_profiles(metadata_df, \n",
-    "            \"/home/ubuntu/ebs_tmp/backend\", \n",
-    "            \"/home/ubuntu/ebs_tmp/backend_reorganised\")"
+    "# move_profiles(metadata_df, \n",
+    "#             \"/home/ubuntu/ebs_tmp/backend\", \n",
+    "#             \"/home/ubuntu/ebs_tmp/backend_reorganised\")\n",
+    "\n",
+    "move_profiles(metadata_df, \"/home/ubuntu/ebs_tmp/jump-scope/backend\", \"/home/ubuntu/ebs_tmp/jump-scope/profiles\")"
    ]
   },
   {
