final figures before feature selection is run at the plate level

--- a/notebooks/figures/figure3/figure3.ipynb
+++ b/notebooks/figures/figure3/figure3.ipynb
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +676,7 @@
     "    # Drop runs on all profiles, including those that don't even have an RNA channel\n",
     "    # (not ideal, but saves time re-running)\n",
     "    (rna_drop_df[\"channel_names\"].str.contains(\"RNA\")) &\n",
-    "    (~match_rep_df[\"Batch\"].str.contains(\"siteSub\")) \n",
+    "    (~rna_drop_df[\"Batch\"].str.contains(\"siteSub\")) \n",
     "    ]\n",
     "\n",
     "group_df = utilssphering.find_group_avg_df(df_subset, group)\n",
