updating to plate level feature selections + other notebook changes

--- a/check-feature-selections.ipynb
+++ b/check-feature-selections.ipynb
@@ -2231,6 +2231,242 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Assay_Plate_Barcode</th>\n",
+       "      <th>Percent_Replicating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Plate2_PCO_6ch_4site_10XPA</td>\n",
+       "      <td>47.777778</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Plate2_PCO_6ch_4site_10XPA</td>\n",
+       "      <td>17.777778</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Plate3_PCO_6ch_4site_10XPA_Crest</td>\n",
+       "      <td>56.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Plate3_PCO_6ch_4site_10XPA_Crest</td>\n",
+       "      <td>23.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Plate3_PCO_6ch_4site_10XPA_Crestz</td>\n",
+       "      <td>62.222222</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>361</th>\n",
+       "      <td>BRO0117059_20X</td>\n",
+       "      <td>55.555556</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>362</th>\n",
+       "      <td>BRO01177034_20x</td>\n",
+       "      <td>58.888889</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>363</th>\n",
+       "      <td>BRO01177034_20x</td>\n",
+       "      <td>54.444444</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>364</th>\n",
+       "      <td>BRO0117059_40x</td>\n",
+       "      <td>54.444444</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>365</th>\n",
+       "      <td>BRO0117059_40x</td>\n",
+       "      <td>45.555556</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>366 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   Assay_Plate_Barcode  Percent_Replicating\n",
+       "0           Plate2_PCO_6ch_4site_10XPA            47.777778\n",
+       "1           Plate2_PCO_6ch_4site_10XPA            17.777778\n",
+       "2     Plate3_PCO_6ch_4site_10XPA_Crest            56.666667\n",
+       "3     Plate3_PCO_6ch_4site_10XPA_Crest            23.333333\n",
+       "4    Plate3_PCO_6ch_4site_10XPA_Crestz            62.222222\n",
+       "..                                 ...                  ...\n",
+       "361                     BRO0117059_20X            55.555556\n",
+       "362                    BRO01177034_20x            58.888889\n",
+       "363                    BRO01177034_20x            54.444444\n",
+       "364                     BRO0117059_40x            54.444444\n",
+       "365                     BRO0117059_40x            45.555556\n",
+       "\n",
+       "[366 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "pd.read_csv(\"checkpoints/test-rep-sphere.csv\")[[\"Assay_Plate_Barcode\", \"Percent_Replicating\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Assay_Plate_Barcode</th>\n",
+       "      <th>Percent_Replicating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Plate2_PCO_6ch_4site_10XPA</td>\n",
+       "      <td>47.777778</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Plate2_PCO_6ch_4site_10XPA</td>\n",
+       "      <td>17.777778</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Plate3_PCO_6ch_4site_10XPA_Crest</td>\n",
+       "      <td>56.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Plate3_PCO_6ch_4site_10XPA_Crest</td>\n",
+       "      <td>23.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Plate3_PCO_6ch_4site_10XPA_Crestz</td>\n",
+       "      <td>62.222222</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>353</th>\n",
+       "      <td>BRO0117059_20X</td>\n",
+       "      <td>58.888889</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>354</th>\n",
+       "      <td>BRO01177034_20x</td>\n",
+       "      <td>60.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>355</th>\n",
+       "      <td>BRO01177034_20x</td>\n",
+       "      <td>52.222222</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>356</th>\n",
+       "      <td>BRO0117059_40x</td>\n",
+       "      <td>57.777778</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>357</th>\n",
+       "      <td>BRO0117059_40x</td>\n",
+       "      <td>44.444444</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>358 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   Assay_Plate_Barcode  Percent_Replicating\n",
+       "0           Plate2_PCO_6ch_4site_10XPA            47.777778\n",
+       "1           Plate2_PCO_6ch_4site_10XPA            17.777778\n",
+       "2     Plate3_PCO_6ch_4site_10XPA_Crest            56.666667\n",
+       "3     Plate3_PCO_6ch_4site_10XPA_Crest            23.333333\n",
+       "4    Plate3_PCO_6ch_4site_10XPA_Crestz            62.222222\n",
+       "..                                 ...                  ...\n",
+       "353                     BRO0117059_20X            58.888889\n",
+       "354                    BRO01177034_20x            60.000000\n",
+       "355                    BRO01177034_20x            52.222222\n",
+       "356                     BRO0117059_40x            57.777778\n",
+       "357                     BRO0117059_40x            44.444444\n",
+       "\n",
+       "[358 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "pd.read_csv(\"checkpoints/match_rep_df.csv\")[[\"Assay_Plate_Barcode\", \"Percent_Replicating\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -2239,7 +2475,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.13 64-bit",
+   "display_name": "Python 3.8.13 ('jump-scope')",
    "language": "python",
    "name": "python3"
   },
@@ -2258,7 +2494,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "90bd059e05f79fb9b7cf5d2b1dae6ea26ca779772e058f49dd8fbe1978749df0"
+    "hash": "73b280186f56a0e7e1261797cbe1e0ce90ada53c728d4589dcde7f990cc23cb6"
    }
   }
  },
