add leaderboard tables

--- a/notebooks/figures/leaderboard_tables/leaderboard_tables.ipynb
+++ b/notebooks/figures/leaderboard_tables/leaderboard_tables.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
        "[362 rows x 29 columns]"
       ]
      },
-     "execution_count": 230,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,17 +530,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "29\n",
-      "28\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -575,7 +567,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>4</th>\n",
        "      <td>1</td>\n",
        "      <td>Confocal</td>\n",
        "      <td>1</td>\n",
@@ -623,7 +615,7 @@
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>5</th>\n",
        "      <td>5</td>\n",
        "      <td>Confocal</td>\n",
        "      <td>1</td>\n",
@@ -635,7 +627,7 @@
        "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>3</th>\n",
        "      <td>6</td>\n",
        "      <td>Confocal</td>\n",
        "      <td>1</td>\n",
@@ -652,31 +644,29 @@
       ],
       "text/plain": [
        "   Place  Modality  Binning  Magnification    NA  Number Of Channels  \\\n",
-       "3      1  Confocal        1             20  0.75                   6   \n",
+       "4      1  Confocal        1             20  0.75                   6   \n",
        "2      2  Confocal        1             10  0.45                   6   \n",
        "0      3  Confocal        1             10  0.45                   6   \n",
        "1      4  Confocal        1             10  0.45                   6   \n",
-       "4      5  Confocal        1             20  0.75                   6   \n",
-       "5      6  Confocal        1             20  0.75                   6   \n",
+       "5      5  Confocal        1             20  0.75                   6   \n",
+       "3      6  Confocal        1             20  0.75                   6   \n",
        "\n",
        "   Z Planes Spinning Disc  Sites  \n",
-       "3         1            no      9  \n",
+       "4         1            no      9  \n",
        "2         3           yes      4  \n",
        "0         1            no      4  \n",
        "1         1           yes      4  \n",
-       "4         1           yes      9  \n",
-       "5         3           yes      4  "
+       "5         1           yes      9  \n",
+       "3         3           yes      4  "
       ]
      },
-     "execution_count": 195,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "moldev_cols = [\n",
-    "    # 'Percent_Score',\n",
-    "    # 'Vendor',\n",
     "    'Modality',\n",
     "    'Binning',\n",
     "    'Magnification',\n",
@@ -684,9 +674,6 @@
     "    'Number_of_channels',\n",
     "    'z_plane',\n",
     "    'spinning-disc',\n",
-    "    # 'Percent_Replicating',\n",
-    "    # 'Percent_Matching',\n",
-    "    # 'channel_names',\n",
     "    'sites'\n",
     "]\n",
     "\n",
@@ -698,12 +685,12 @@
     "\n",
     "make_leaderboard(df, moldev_cols)\n",
     "\n",
-    "# df.to_csv(\"(1)-moldev_leaderboard.csv\", index=False)"
+    "df.to_csv(\"(1)-moldev_leaderboard.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +728,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>5</th>\n",
        "      <td>1</td>\n",
        "      <td>Confocal</td>\n",
        "      <td>1</td>\n",
@@ -754,7 +741,7 @@
        "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>2</th>\n",
        "      <td>2</td>\n",
        "      <td>Confocal</td>\n",
        "      <td>1</td>\n",
@@ -767,7 +754,7 @@
        "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>4</th>\n",
        "      <td>3</td>\n",
        "      <td>Confocal</td>\n",
        "      <td>1</td>\n",
@@ -780,7 +767,7 @@
        "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>0</th>\n",
        "      <td>4</td>\n",
        "      <td>Confocal</td>\n",
        "      <td>1</td>\n",
@@ -793,7 +780,7 @@
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>1</th>\n",
        "      <td>5</td>\n",
        "      <td>Confocal</td>\n",
        "      <td>1</td>\n",
@@ -806,7 +793,7 @@
        "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>3</th>\n",
        "      <td>6</td>\n",
        "      <td>Confocal</td>\n",
        "      <td>1</td>\n",
@@ -824,30 +811,29 @@
       ],
       "text/plain": [
        "   Place  Modality  Binning  Magnification   NA  Number Of Channels  \\\n",
-       "2      1  Confocal        1             20  1.0                   5   \n",
-       "3      2  Confocal        1             20  1.0                   6   \n",
-       "0      3  Confocal        1             20  1.0                   5   \n",
-       "1      4  Confocal        1             10  0.4                   6   \n",
-       "4      5  Confocal        1             20  1.0                   6   \n",
-       "5      6  Confocal        1             40  1.0                   6   \n",
+       "5      1  Confocal        1             20  1.0                   5   \n",
+       "2      2  Confocal        1             20  1.0                   6   \n",
+       "4      3  Confocal        1             20  1.0                   5   \n",
+       "0      4  Confocal        1             10  0.4                   6   \n",
+       "1      5  Confocal        1             20  1.0                   6   \n",
+       "3      6  Confocal        1             40  1.0                   6   \n",
        "\n",
        "   Simultaneous Excitation  Z Planes Immersion  Sites  \n",
-       "2                        2        12     water      9  \n",
-       "3                        4        12     water      9  \n",
-       "0                        2         1     water      9  \n",
-       "1                        2        12       dry      4  \n",
-       "4                        4        12     water      9  \n",
-       "5                        4        12     water      9  "
+       "5                        2        12     water      9  \n",
+       "2                        4        12     water      9  \n",
+       "4                        2         1     water      9  \n",
+       "0                        2        12       dry      4  \n",
+       "1                        4        12     water      9  \n",
+       "3                        4        12     water      9  "
       ]
      },
-     "execution_count": 232,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "yokogawa_us_cols = [\n",
-    "    # 'Percent_Score',\n",
     "    'Modality',\n",
     "    'Binning',\n",
     "    'Magnification',\n",
@@ -869,12 +855,12 @@
     "\n",
     "make_leaderboard(df, yokogawa_us_cols)\n",
     "\n",
-    "# df.to_csv(\"(2)-yokogawa_US_leaderboard.csv\", index=False)"
+    "df.to_csv(\"(2)-yokogawa_us_leaderboard.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -912,7 +898,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>Confocal</td>\n",
        "      <td>1</td>\n",
@@ -925,7 +911,7 @@
        "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>0</th>\n",
        "      <td>2</td>\n",
        "      <td>Confocal</td>\n",
        "      <td>1</td>\n",
@@ -943,22 +929,21 @@
       ],
       "text/plain": [
        "   Place  Modality  Binning  Magnification    NA  Number Of Channels  \\\n",
-       "0      1  Confocal        1             20  0.75                   5   \n",
-       "1      2  Confocal        1             40  0.95                   5   \n",
+       "1      1  Confocal        1             20  0.75                   5   \n",
+       "0      2  Confocal        1             40  0.95                   5   \n",
        "\n",
        "   Simultaneous Excitation  Z Planes Immersion  Sites  \n",
-       "0                      NaN        10       dry      9  \n",
-       "1                      NaN        12       dry      2  "
+       "1                      NaN        10       dry      9  \n",
+       "0                      NaN        12       dry      2  "
       ]
      },
-     "execution_count": 233,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "yokogawa_japan_cols = [\n",
-    "    # 'Percent_Score',\n",
     "    'Modality',\n",
     "    'Binning',\n",
     "    'Magnification',\n",
@@ -978,22 +963,14 @@
     "\n",
     "make_leaderboard(df, yokogawa_japan_cols)\n",
     "\n",
-    "# df.to_csv(\"(3)-yokogawa_japan_leaderboard.csv\", index=False)"
+    "df.to_csv(\"(3)-yokogawa_japan_leaderboard.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "29\n",
-      "26\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -1065,7 +1042,7 @@
        "0         1       dry      1  "
       ]
      },
-     "execution_count": 220,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1090,12 +1067,12 @@
     "\n",
     "make_leaderboard(df, nikon_cols)\n",
     "\n",
-    "# df.to_csv(\"(4)-nikon_leaderboard.csv\", index=False)"
+    "df.to_csv(\"(4)-nikon_leaderboard.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1132,7 +1109,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>0</th>\n",
        "      <td>1</td>\n",
        "      <td>Confocal</td>\n",
        "      <td>2</td>\n",
@@ -1144,7 +1121,7 @@
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>6</th>\n",
        "      <td>2</td>\n",
        "      <td>Confocal</td>\n",
        "      <td>2</td>\n",
@@ -1156,7 +1133,7 @@
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>4</th>\n",
        "      <td>3</td>\n",
        "      <td>Widefield</td>\n",
        "      <td>1</td>\n",
@@ -1168,7 +1145,7 @@
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <th>8</th>\n",
        "      <td>4</td>\n",
        "      <td>Widefield</td>\n",
        "      <td>2</td>\n",
@@ -1192,20 +1169,8 @@
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <th>1</th>\n",
        "      <td>6</td>\n",
-       "      <td>Widefield</td>\n",
-       "      <td>1</td>\n",
-       "      <td>20</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>3</td>\n",
-       "      <td>water</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>7</td>\n",
        "      <td>Widefield</td>\n",
        "      <td>2</td>\n",
        "      <td>20</td>\n",
@@ -1216,7 +1181,19 @@
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>5</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Widefield</td>\n",
+       "      <td>1</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>water</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
        "      <td>8</td>\n",
        "      <td>Confocal</td>\n",
        "      <td>1</td>\n",
@@ -1228,7 +1205,7 @@
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>2</th>\n",
        "      <td>9</td>\n",
        "      <td>Confocal</td>\n",
        "      <td>1</td>\n",
@@ -1240,7 +1217,7 @@
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>7</th>\n",
        "      <td>10</td>\n",
        "      <td>Confocal</td>\n",
        "      <td>2</td>\n",
@@ -1257,31 +1234,31 @@
       ],
       "text/plain": [
        "   Place   Modality  Binning  Magnification   NA  Number Of Channels  \\\n",
-       "3      1   Confocal        2             20  1.0                   5   \n",
-       "1      2   Confocal        2             20  1.0                   5   \n",
-       "5      3  Widefield        1             20  1.0                   5   \n",
-       "6      4  Widefield        2             20  1.0                   5   \n",
+       "0      1   Confocal        2             20  1.0                   5   \n",
+       "6      2   Confocal        2             20  1.0                   5   \n",
+       "4      3  Widefield        1             20  1.0                   5   \n",
+       "8      4  Widefield        2             20  1.0                   5   \n",
        "9      5  Widefield        2             20  1.0                   5   \n",
-       "7      6  Widefield        1             20  1.0                   5   \n",
-       "8      7  Widefield        2             20  1.0                   5   \n",
-       "2      8   Confocal        1             20  1.0                   5   \n",
-       "0      9   Confocal        1             20  1.0                   5   \n",
-       "4     10   Confocal        2             20  1.0                   5   \n",
+       "1      6  Widefield        2             20  1.0                   5   \n",
+       "5      7  Widefield        1             20  1.0                   5   \n",
+       "3      8   Confocal        1             20  1.0                   5   \n",
+       "2      9   Confocal        1             20  1.0                   5   \n",
+       "7     10   Confocal        2             20  1.0                   5   \n",
        "\n",
        "   Z Planes Immersion  Sites  \n",
-       "3         3     water      3  \n",
-       "1         1     water      3  \n",
-       "5         1     water      3  \n",
+       "0         3     water      3  \n",
        "6         1     water      3  \n",
+       "4         1     water      3  \n",
+       "8         1     water      3  \n",
        "9         3     water      3  \n",
-       "7         3     water      3  \n",
-       "8         3     water      3  \n",
-       "2         3     water      3  \n",
-       "0         1     water      3  \n",
-       "4         3     water      3  "
+       "1         3     water      3  \n",
+       "5         3     water      3  \n",
+       "3         3     water      3  \n",
+       "2         1     water      3  \n",
+       "7         3     water      3  "
       ]
      },
-     "execution_count": 177,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1306,7 +1283,7 @@
     "\n",
     "make_leaderboard(df, pe_cols)\n",
     "\n",
-    "# df.to_csv(\"(5)-pe_leaderboard.csv\", index=False)"
+    "df.to_csv(\"(5)-pe_leaderboard.csv\", index=False)"
    ]
   },
   {
