removing duplicates and removing BF info as a defining setting

--- a/notebooks/figures/leaderboard_tables/leaderboard_tables.ipynb
+++ b/notebooks/figures/leaderboard_tables/leaderboard_tables.ipynb
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,6 +476,8 @@
     "        \"value_95_matching\",\n",
     "        \"cell_count\",\n",
     "        \"Sites-SubSampled\",\n",
+    "        \"BF_Zplanes\", # Ignore since only one BF zplane is used\n",
+    "        \"brightfield_z_plane_used\"\n",
     "    ]\n",
     "    # Find the columns that are not in non_group_cols\n",
     "    diff = list(set(df.columns) - set(non_group_cols))\n",
@@ -530,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,12 +555,14 @@
     "\n",
     "df = make_leaderboard(df, moldev_cols)\n",
     "\n",
+    "assert df.equals(df.drop_duplicates()), \"DataFrame contains duplicates\"\n",
+    "\n",
     "df.to_csv(\"(1)-moldev_leaderboard.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,7 +575,8 @@
     "    \"simultaneous-excitation\",\n",
     "    'z_plane',\n",
     "    \"dry-immersion\",\n",
-    "    'sites'\n",
+    "    'sites',\n",
+    "\n",
     "]\n",
     "\n",
     "df = match_rep_df[\n",
@@ -582,14 +587,16 @@
     "\n",
     "df[\"simultaneous-excitation\"] = df[\"simultaneous-excitation\"].astype(\"Int64\")\n",
     "\n",
-    "df = make_leaderboard(df, yokogawa_us_cols)\n",
+    "df = make_leaderboard(df, yokogawa_us_cols, average_duplicates=True)\n",
+    "\n",
+    "assert df.equals(df.drop_duplicates()), \"DataFrame contains duplicates\"\n",
     "\n",
     "df.to_csv(\"(2)-yokogawa_us_leaderboard.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,7 +606,6 @@
     "    'Magnification',\n",
     "    'aperture',\n",
     "    'Number_of_channels',\n",
-    "    \"simultaneous-excitation\",\n",
     "    'z_plane',\n",
     "    \"dry-immersion\",\n",
     "    'sites'\n",
@@ -613,12 +619,14 @@
     "\n",
     "df = make_leaderboard(df, yokogawa_japan_cols)\n",
     "\n",
+    "assert df.equals(df.drop_duplicates()), \"DataFrame contains duplicates\"\n",
+    "\n",
     "df.to_csv(\"(3)-yokogawa_japan_leaderboard.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -641,12 +649,14 @@
     "\n",
     "df = make_leaderboard(df, nikon_cols)\n",
     "\n",
+    "assert df.equals(df.drop_duplicates()), \"DataFrame contains duplicates\"\n",
+    "\n",
     "df.to_csv(\"(4)-nikon_leaderboard.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -668,6 +678,8 @@
     "].copy()\n",
     "\n",
     "df = make_leaderboard(df, pe_cols)\n",
+    "\n",
+    "assert df.equals(df.drop_duplicates()), \"DataFrame contains duplicates\"\n",
     "\n",
     "df.to_csv(\"(5)-pe_leaderboard.csv\", index=False)"
    ]
