--- a/notebooks/figures/leaderboard_tables/leaderboard_tables.ipynb
+++ b/notebooks/figures/leaderboard_tables/leaderboard_tables.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
        "[362 rows x 29 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -656,9 +656,197 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Place</th>\n",
+       "      <th>Modality</th>\n",
+       "      <th>Binning</th>\n",
+       "      <th>Magnification</th>\n",
+       "      <th>NA</th>\n",
+       "      <th>Number Of Channels</th>\n",
+       "      <th>Z Planes</th>\n",
+       "      <th>Immersion</th>\n",
+       "      <th>Sites</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Confocal</td>\n",
+       "      <td>2</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>water</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Confocal</td>\n",
+       "      <td>2</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>water</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Widefield</td>\n",
+       "      <td>1</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>water</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Widefield</td>\n",
+       "      <td>2</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>water</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Widefield</td>\n",
+       "      <td>2</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>water</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Widefield</td>\n",
+       "      <td>2</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>water</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Widefield</td>\n",
+       "      <td>1</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>water</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>8</td>\n",
+       "      <td>Confocal</td>\n",
+       "      <td>1</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>water</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>9</td>\n",
+       "      <td>Confocal</td>\n",
+       "      <td>1</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>water</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10</td>\n",
+       "      <td>Confocal</td>\n",
+       "      <td>2</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>water</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Place   Modality  Binning  Magnification   NA  Number Of Channels  \\\n",
+       "2      1   Confocal        2             20  1.0                   5   \n",
+       "1      2   Confocal        2             20  1.0                   5   \n",
+       "5      3  Widefield        1             20  1.0                   5   \n",
+       "6      4  Widefield        2             20  1.0                   5   \n",
+       "9      5  Widefield        2             20  1.0                   5   \n",
+       "7      6  Widefield        2             20  1.0                   5   \n",
+       "8      7  Widefield        1             20  1.0                   5   \n",
+       "3      8   Confocal        1             20  1.0                   5   \n",
+       "0      9   Confocal        1             20  1.0                   5   \n",
+       "4     10   Confocal        2             20  1.0                   5   \n",
+       "\n",
+       "   Z Planes Immersion  Sites  \n",
+       "2         3     water      3  \n",
+       "1         1     water      3  \n",
+       "5         1     water      3  \n",
+       "6         1     water      3  \n",
+       "9         3     water      3  \n",
+       "7         3     water      3  \n",
+       "8         3     water      3  \n",
+       "3         3     water      3  \n",
+       "0         1     water      3  \n",
+       "4         3     water      3  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pe_cols = [\n",
     "    'Modality',\n",
@@ -681,15 +869,245 @@
     "\n",
     "assert df.equals(df.drop_duplicates()), \"DataFrame contains duplicates\"\n",
     "\n",
-    "df.to_csv(\"(5)-pe_leaderboard.csv\", index=False)"
+    "df\n",
+    "\n",
+    "# df.to_csv(\"(5)-pe_leaderboard.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Place</th>\n",
+       "      <th>Modality</th>\n",
+       "      <th>Binning</th>\n",
+       "      <th>Magnification</th>\n",
+       "      <th>NA</th>\n",
+       "      <th>Number Of Channels</th>\n",
+       "      <th>Z Planes</th>\n",
+       "      <th>Immersion</th>\n",
+       "      <th>Sites</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Confocal</td>\n",
+       "      <td>2</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>water</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Confocal</td>\n",
+       "      <td>2</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>water</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Widefield</td>\n",
+       "      <td>1</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>water</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Widefield</td>\n",
+       "      <td>2</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>water</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Widefield</td>\n",
+       "      <td>2</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>water</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Widefield</td>\n",
+       "      <td>2</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>water</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Widefield</td>\n",
+       "      <td>1</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>water</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>8</td>\n",
+       "      <td>Confocal</td>\n",
+       "      <td>1</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>water</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>9</td>\n",
+       "      <td>Confocal</td>\n",
+       "      <td>1</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>water</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10</td>\n",
+       "      <td>Confocal</td>\n",
+       "      <td>2</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>water</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Place   Modality  Binning  Magnification   NA  Number Of Channels  \\\n",
+       "2      1   Confocal        2             20  1.0                   5   \n",
+       "1      2   Confocal        2             20  1.0                   5   \n",
+       "5      3  Widefield        1             20  1.0                   5   \n",
+       "6      4  Widefield        2             20  1.0                   5   \n",
+       "9      5  Widefield        2             20  1.0                   5   \n",
+       "7      6  Widefield        2             20  1.0                   5   \n",
+       "8      7  Widefield        1             20  1.0                   5   \n",
+       "3      8   Confocal        1             20  1.0                   5   \n",
+       "0      9   Confocal        1             20  1.0                   5   \n",
+       "4     10   Confocal        2             20  1.0                   5   \n",
+       "\n",
+       "   Z Planes Immersion  Sites  \n",
+       "2         3     water      3  \n",
+       "1         1     water      3  \n",
+       "5         1     water      3  \n",
+       "6         1     water      3  \n",
+       "9         3     water      3  \n",
+       "7         3     water      3  \n",
+       "8         3     water      3  \n",
+       "3         3     water      3  \n",
+       "0         1     water      3  \n",
+       "4         3     water      3  "
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1 = df.copy()\n",
+    "\n",
+    "# df1.drop([\"Modality\", \"Immersion\", \"NA\", \"Binning\", \"Magnification\"], axis=1, inplace=True)\n",
+    "\n",
+    "\n",
+    "\n",
+    "df1.drop_duplicates(inplace=True)\n",
+    "\n",
+    "df1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2    <class 'int'>\n",
+       "1    <class 'int'>\n",
+       "5    <class 'int'>\n",
+       "6    <class 'int'>\n",
+       "9    <class 'int'>\n",
+       "7    <class 'int'>\n",
+       "8    <class 'int'>\n",
+       "3    <class 'int'>\n",
+       "0    <class 'int'>\n",
+       "4    <class 'int'>\n",
+       "Name: Sites, dtype: object"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.iloc[:,8].apply(type)"
+   ]
   }
  ],
  "metadata": {
